--- a/main_1.3B_model-mps copy-test.ipynb
+++ b/main_1.3B_model-mps copy-test.ipynb
@@ -118,7 +118,97 @@
     }
    ],
    "source": [
-    "train_embeddings, train_labels, validation_embeddings, validation_labels, test_embeddings, test_labels = sst_process_embeddings_and_labels()"
+    "\n",
+    "# Paths to save/load embeddings and labels\n",
+    "long_train_em_file = 'long_train_em.npy'\n",
+    "long_train_la_file = 'long_train_la.npy'\n",
+    "long_val_em_file = 'long_val_em.npy'\n",
+    "long_val_la_file = 'long_val_la.npy'\n",
+    "long_test_em_file = 'long_test_em.npy'\n",
+    "long_test_la_file = 'long_test_la.npy'\n",
+    "\n",
+    "# Check if embeddings and labels are already saved\n",
+    "if (os.path.exists(long_train_em_file)):\n",
+    "    # Load embeddings and labels\n",
+    "    long_train_em = np.load(long_train_em_file)\n",
+    "    long_train_la = np.load(long_train_la_file)\n",
+    "    long_val_em = np.load(long_val_em_file)\n",
+    "    long_val_la = np.load(long_val_la_file)\n",
+    "    long_test_em = np.load(long_test_em_file)\n",
+    "    long_test_la = np.load(long_test_la_file)\n",
+    "    print(\"Loaded train, validation, and test embeddings and labels from disk.\")\n",
+    "else:\n",
+    "    # Load model directly\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(\"HuggingFaceTB/SmolLM-1.7B-Instruct\")\n",
+    "    model = AutoModelForCausalLM.from_pretrained(\"HuggingFaceTB/SmolLM-1.7B-Instruct\")\n",
+    "\n",
+    "    # Move the model to GPU\n",
+    "    model = model.to(device)\n",
+    "\n",
+    "    # Load the SST-2 dataset from the GLUE benchmark with streaming\n",
+    "    dataset = load_dataset('glue', 'sst2', streaming=True)\n",
+    "\n",
+    "    # Initialize lists to store embeddings and labels for each set\n",
+    "    long_train_em_list = []\n",
+    "    long_train_la_list = []\n",
+    "    long_val_em_list = []\n",
+    "    long_val_la_list = []\n",
+    "    long_test_em_list = []\n",
+    "    long_test_la_list = []\n",
+    "\n",
+    "    # Function to extract embeddings\n",
+    "    def extract_embeddings(streamed_dataset, embeddings_list, labels_list):\n",
+    "        for example in tqdm(streamed_dataset):\n",
+    "            inputs = tokenizer(\n",
+    "                example['sentence'],\n",
+    "                return_tensors='pt',\n",
+    "                padding=True,\n",
+    "                truncation=True,\n",
+    "                max_length=2048\n",
+    "            ).to(device)\n",
+    "            with torch.no_grad():\n",
+    "                outputs = model(**inputs, output_hidden_states=True)\n",
+    "            hidden_states = outputs.hidden_states[-1]  # last layer hidden states\n",
+    "            embeddings = hidden_states.mean(dim=1).cpu().numpy()  # average over sequence length\n",
+    "            embeddings_list.append(embeddings.squeeze())  # shape (hidden_size,)\n",
+    "            labels_list.append(example['label'])\n",
+    "\n",
+    "    # Extract embeddings for train, validation, and test sets\n",
+    "    extract_embeddings(dataset['train'], long_train_em_list, long_train_la_list)\n",
+    "    extract_embeddings(dataset['validation'], long_val_em_list, long_val_la_list)\n",
+    "    extract_embeddings(dataset['test'], long_test_em_list, long_test_la_list)\n",
+    "\n",
+    "    # Convert lists to numpy arrays\n",
+    "    long_train_em = np.vstack(long_train_em_list)\n",
+    "    long_train_la = np.array(long_train_la_list)\n",
+    "    long_val_em = np.vstack(long_val_em_list)\n",
+    "    long_val_la = np.array(long_val_la_list)\n",
+    "    long_test_em = np.vstack(long_test_em_list)\n",
+    "    long_test_la = np.array(long_test_la_list)\n",
+    "\n",
+    "    # Standardize the embeddings\n",
+    "    scaler = StandardScaler()\n",
+    "    long_train_em = scaler.fit_transform(long_train_em)\n",
+    "    long_val_em = scaler.transform(long_val_em)\n",
+    "    long_test_em = scaler.transform(long_test_em)\n",
+    "\n",
+    "    # Save embeddings, labels, and scaler to disk\n",
+    "    np.save(long_train_em_file, long_train_em)\n",
+    "    np.save(long_train_la_file, long_train_la)\n",
+    "    np.save(long_val_em_file, long_val_em)\n",
+    "    np.save(long_val_la_file, long_val_la)\n",
+    "    np.save(long_test_em_file, long_test_em)\n",
+    "    np.save(long_test_la_file, long_test_la)\n",
+    "\n",
+    "    print(\"Saved train, validation, and test embeddings and labels to disk.\")\n",
+    "\n",
+    "# Print shapes of embeddings and labels\n",
+    "print(f\"Train embeddings shape: {long_train_em.shape}\")\n",
+    "print(f\"Train labels shape: {long_train_la.shape}\")\n",
+    "print(f\"Validation embeddings shape: {long_val_em.shape}\")\n",
+    "print(f\"Validation labels shape: {long_val_la.shape}\")\n",
+    "print(f\"Test embeddings shape: {long_test_em.shape}\")\n",
+    "print(f\"Test labels shape: {long_test_la.shape}\")"
    ]
   },
   {
