Cleaning up the code a bit

--- a/main_1.3B_model-mps_most-up2date_long-sst.ipynb
+++ b/main_1.3B_model-mps_most-up2date_long-sst.ipynb
@@ -14,12 +14,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Try with the imdb dataet (DONE)\n",
+    "- Try with the imdb dataset (DONE)\n",
     "- Split the train set fo sst to test and train sets (DONE)\n",
-    "- Incorperate early stopping during training\n",
-    "- Simplify the loss function for distillation so there is less parameters\n",
-    "- Make a combinded ECE Plot\n",
-    "- Test on the the training set"
+    "- Incorperate early stopping during training (DONE)\n",
+    "- Simplify the loss function for distillation so there is less parameters (DONE)\n",
+    "- Make a combinded ECE Plot for the ensemble and student model (DONE)\n",
+    "- Test on the the training set (DONE)"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -43,20 +43,14 @@
     }
    ],
    "source": [
-    "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
-    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "from datasets import load_dataset\n",
     "import numpy as np\n",
-    "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.calibration import calibration_curve, CalibratedClassifierCV\n",
     "import warnings \n",
+    "from utils import *\n",
+    "from train import *\n",
     "\n",
     "# Check for GPU\n",
     "if torch.backends.mps.is_available():\n",
@@ -67,11 +61,7 @@
     "    print('Using CUDA device')\n",
     "else:\n",
     "    device = torch.device('cpu')\n",
-    "    print('No GPU found. Using CPU')\n",
-    "\n",
-    "\n",
-    "from utils import *\n",
-    "from train import *\n"
+    "    print('No GPU found. Using CPU')"
    ]
   },
   {
